--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -6,7 +6,7 @@
   font-style: normal;
 }
 #app {
-  max-width: 1168px;
+  min-width: 415px;
   max-width: 1920px;
   margin: 0 auto;
   font-weight: normal;
@@ -61,6 +61,9 @@ a,
 .f48{
   font-size: 48px;
 }
+.f34{
+  font-size: 34px;
+}
 .f32{
   font-size: 32px;
 }
@@ -79,6 +82,9 @@ a,
 }
 .f-light-blue{
   color:#6309FF;;
+}
+.f-white{
+  color:white;
 }
 
 .ftb{
@@ -191,4 +197,8 @@ a,
 
 .brr{
   border-right:solid 2px lightgrey;
+}
+
+.brb{
+  border-bottom:solid 2px #320A8D;
 }
